[package]
name = "solana-msg-utils"
version = "0.1.0"
edition = "2021"
authors = ["Tulip Protocol"]
description = "macros for efficient on-chain logging"
keywords = ["solana"]
license = "MIT/Apache-2.0"
documentation = "https://docs.rs/solana-msg-utils"
readme = "./README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
solana-program = ">=1.8"
tulip-arrform = "0.1.1"
[profile.release]
lto = "fat"
codegen-units = 1
panic = "abort"
incremental = false
opt-level = 3
[profile.release.build-override]
opt-level = 3
incremental = false
codegen-units = 1 